--- a/cool/templates/main/swagme.html
+++ b/cool/templates/main/swagme.html
@@ -1,11 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'cool/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'cool/css/swagme.css' %}">
     <title>Swag Me 2</title>
 </head>
 <body>
-    <h1>Swag Me 2</h1>
+    <div class="main">
+        <img src="{% static 'cool/images/image4.avif' %}" alt="" srcset="">
+        <h1>Albert Einstein</h1>
+        <img src="{% static 'cool/images/image2.webp' %}" alt="" srcset="">
+   <p>
+    “Challenges are inevitable whenever you try something new or walk a new path. 
+    The most discouraging of these<br> challenges come in the form of failure. However,
+     according to this quote, failing means that it was only your first attempt at<br> learning something, and many more will follow.”
+   </p>
+    </div>
 </body>
+<script src="{% static 'cool/javascript/swagme.js' %}"></script>
+<script src="{% static 'cool/javascript/index.js' %}"></script>
 </html>
